Adds background color to migration alert.
Fixes #390.

--- a/assets/css/_sass/_blog-post.scss
+++ b/assets/css/_sass/_blog-post.scss
@@ -308,6 +308,7 @@
 }
 
 #migration-alert{
-	margin-top: 18px;
-	padding-top: 16px;
+    margin: 24px 0 -1em;
+    padding: 18px;
+    background: rgba(117,227,240,.325);
 }
