--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -2,7 +2,8 @@
 	<div class="flexnav-main">
 		<div class="flexnav__home-icon">
 			<a href="{{ site.url }}" aria-label="Scholars' Lab home">
-				{% include nav-logo.html %}
+				<img src="/assets/img/logo.png" alt="SLab logo">
+				{% comment %}{% include nav-logo.html %} {% endcomment %}
 			</a>
 		</div>
 
