--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -53,7 +53,8 @@
 
     <div class="footer__logos">
       <a class="footer-logo__slab" href="{{ site.url }}" aria-label="Scholars' Lab home">
-        {% include nav-logo.html %}
+        <img src="/assets/img/logo-smallest.png" alt="SLab logo">
+        {% comment %}{% include nav-logo.html %}{% endcomment  %}
       </a>
       <a class="footer-logo__uva" href="https://www.library.virginia.edu/" aria-label="UVA Library home">
         <img src="{{ '/assets/img/svg/uva-library-text-block-white.svg' | relative_url }}" alt="UVA Library logo">
