--- a/assets/css/_sass/_home.scss
+++ b/assets/css/_sass/_home.scss
@@ -545,3 +545,20 @@ html, body {
 .home-spatial__text {
 
 }
+
+#snowday-banner{
+	font-family: "Raleway", sans-serif;
+	border: 4px solid #76e3ef;
+	background-color: white;
+	color: #873cdd;
+	top: 60px;
+	width: 100%;
+	position: absolute;
+	padding-left: 15px;
+	padding-right: 0px;
+	padding-top: 15px;
+	padding-bottom: 15px;
+	margin-left: 0px;
+	z-index: 1;
+	text-align: center;
+}
