--- a/_includes/snowday.html
+++ b/_includes/snowday.html
@@ -1,3 +1,3 @@
 <div id="snowday-banner">
-The Scholars' Lab is running modified hours today.
+<h1>The Scholars' Lab is running modified hours today.</h1>
 </div>
