--- a/_layouts/events.html
+++ b/_layouts/events.html
@@ -61,43 +61,20 @@ layout: default
 				</a>
 			</div>
 		</div>
+		
+<!-- Code to hook into YAML goes here, if we create the correct YAML. See GitHub issue #429 -->
 
-		<div class="event__notes">
+<div class="event__notes">
 			<div class="event-notes__title">Notes</div>
 			<div class="page--borrowed-style">
+			
 			<ul class="event-notes__content">
-				<li><span>Prior knowledge required?</span><br/> Nope! Open to all, especially beginners. <!--code>page.codereqs | default: Nope! No prior knowledge is assumed&amp;beginners definitely encouraged.</code--><br/></li>
-				{% if page.supplies %}
-				<li><span>Supplies to bring:</span> [insert supplies]</li> <!--code> page.supplies | default: Nope! Come as you are.</code></li-->
-				{% endif %}
-				<!-- NB: I know the wording on this isn't strictly true; figured would leave to content people to edit it -->
-				<li><span>Who can come?</span><br/>This event is free to attend and are open to the UVa and larger Charlottesville community.</li>
+				<li><span>Questions?</span><br/>Contact Scholars' Lab's Head of Public Programs <a href="mailto:lam2c@virginia.edu?subject=Question about SLab Event">Laura Miller</a>.</li>
+</ul>
+</div>
+</div>
 
-				<!-- NB: !!! again, compensating until restructure data !!! -->
-				{% assign hosts = site.people | where_exp: "person", "person.slug == page.author" %}
-				<li class="event-notes__questions"><span>Questions?</span><br/>Contact
-				{% for host in hosts %} {{ host.name }} ({{ host.email }}),{% endfor %} HostName Two (email@virginia.edu), or HostName3 Lastnamez (emailz@virginia.edu).</li>
-
-				<!-- any custom notes someone's added: -->
-				{% if page.notes and page.notes.size >= 1 %}
-				<li>
-					<h3>Notes:</h3>
-					<ul>
-					{% for note in page.notes %}
-						<li>{{ note }}</li>
-					{% endfor %}
-					</ul>
-				</li>
-				{% endif %}
-			</ul> <!-- end notes content -->
-			</div>
-		</div> <!-- end notes -->
-
-		<div class="event__questions">
-			<p class="event-questions__text">Questions? Contact
-				{% for host in hosts %} {{ host.name }} ({{ host.email }}),{% endfor %} HostName Two (email@virginia.edu), or HostName3 Lastnamez (emailz@virginia.edu).
-			</p>
-		</div>
+</div> <!-- end notes -->
 
 	</div> <!-- end main content -->
 </article> <!-- end wrapper -->
