Work on /work & individual project pages
- removes _data folder (contents not in use: _updates.yml was for my
“quick news” idea that’s moved to Rainy Day, and _work.yml was not in
use)
- Changes research-category YAML option from “Scholarly Collaborations”
to “Collaborations”
- removes “current: “ and “year: “ YAML, instead adds “start-year” and
“end-year” YAML (can write “current” for end-year when appropriate)
- Wrote “end-year: (before 2018)” for any projects I know aren’t
current but don’t have an end date for. There’s a GH issue to search
for these and sub in better dates, under the Rainy Day milestone.

--- a/_layouts/work.html
+++ b/_layouts/work.html
@@ -13,7 +13,7 @@ layout: default
 		<span>{{ page.title | replace: ' - ', ': ' }}</span>
 	</div>
 	<div class="project-content__metadata" {% if title_array.size <= 2 %}style="flex-flow: column nowrap;"{% endif %}>
-		<div class="project-content__year"><span>Year:</span><div>{{ page.year }}</div></div>
+		<div class="project-content__year"><span>When:</span><div>{{ page.start-year }}-{{ page.end-year }}</div></div>
 		<div class="project-content__category">{% if page.research-category %}<span>Work type:</span><div>{{ page.research-category | replace: 'and', '&amp;' }}</div>{% endif %}</div>
 		<!--div class="project-content__cta"><a href="{{ page.link }}">Visit Project</a></div-->
 	</div>
