--- a/_layouts/work.html
+++ b/_layouts/work.html
@@ -13,7 +13,11 @@ layout: default
 		<span>{{ page.title | replace: ' - ', ': ' }}</span>
 	</div>
 	<div class="project-content__metadata" {% if title_array.size <= 2 %}style="flex-flow: column nowrap;"{% endif %}>
+		{% if page.start-year == page.end-year or page.end-year.blank? %}
+		<div class="project-content__year"><span>When:</span><div>{{ page.start-year }}</div></div>
+		{% else %}
 		<div class="project-content__year"><span>When:</span><div>{{ page.start-year }}-{{ page.end-year }}</div></div>
+		{% endif %}
 		<div class="project-content__category">{% if page.research-category %}<span>Work type:</span><div>{{ page.research-category | replace: 'and', '&amp;' }}</div>{% endif %}</div>
 		<!--div class="project-content__cta"><a href="{{ page.link }}">Visit Project</a></div-->
 	</div>
