--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -2,7 +2,7 @@
 	<div class="flexnav-main">
 		<div class="flexnav__home-icon">
 			<a href="{{ site.url }}" aria-label="Scholars' Lab home">
-				<img src="/assets/img/logo.png" alt="SLab logo">
+				<img id='slab-logo' src="/assets/img/logo.png" alt="SLab logo">
 				{% comment %}{% include nav-logo.html %} {% endcomment %}
 			</a>
 		</div>
