--- a/assets/css/_sass/_navbar.scss
+++ b/assets/css/_sass/_navbar.scss
@@ -241,4 +241,11 @@ ul[class*="flexnav"] {
 	opacity: 1;
 }
 
+/* Style for art deco logo */
+
+#slab-logo {
+	max-width: 70%;
+	vertical-align: bottom;
+}
+
 /* End navbar styles */
