--- a/assets/css/_sass/_home.scss
+++ b/assets/css/_sass/_home.scss
@@ -567,3 +567,10 @@ html, body {
 	margin-top: 0px;
 	margin-bottom: 0px;
 }
+
+@media only screen and (max-width: 600px){
+		.post-main-content{
+		padding-left: 8.3%;
+		padding-right: 8.3%;
+	}
+}
