--- a/assets/css/_sass/_home.scss
+++ b/assets/css/_sass/_home.scss
@@ -574,3 +574,10 @@ html, body {
 		padding-right: 8.3%;
 	}
 }
+
+#hero-arrow{
+	width: 4em;
+	justify-self: center;
+	position: absolute;
+	bottom: 0;
+}
