Update the hero

--- a/assets/css/_sass/_home.scss
+++ b/assets/css/_sass/_home.scss
@@ -576,8 +576,8 @@ html, body {
 }
 
 #hero-arrow{
-	width: 4em;
+	width: 1em;
 	justify-self: center;
 	position: absolute;
-	bottom: 0;
+	bottom: 16px;
 }
