Update floorplan include

--- a/assets/css/_sass/_home.scss
+++ b/assets/css/_sass/_home.scss
@@ -581,3 +581,14 @@ html, body {
 	position: absolute;
 	bottom: 16px;
 }
+
+#makerspace-location-label{
+	text-align: center;
+}
+
+#makerspace-plan{
+	position: absolute;
+	top: 0;
+	left: 0;
+	max-height: 75vh;
+}
