--- a/assets/css/_sass/_components/link-button.scss
+++ b/assets/css/_sass/_components/link-button.scss
@@ -13,7 +13,7 @@
 		margin-top: 4px;
 		font-size: 1.5rem;
 	//	font-family: "Inconsolata", monospace;
-		font-family: "base-mono-wide", monospace;
+		font-family: monospace;
 		font-weight: 700;
 		line-height: 1;
 		text-decoration: none;
