--- a/assets/css/_sass/_components/link-default.scss
+++ b/assets/css/_sass/_components/link-default.scss
@@ -11,7 +11,7 @@
 /* Example code: */
 [class*="home-"] {
 	a {
-		font-family: "base-mono-narrow", monospace;
+		font-family:  monospace;
 		text-decoration: none;
 		color: black;
 		border-bottom: 2px solid magenta;
