--- a/assets/css/_sass/_page.scss
+++ b/assets/css/_sass/_page.scss
@@ -63,7 +63,7 @@
 
 .page-header__subtitle {
 	font-weight: 200 !important;
-	font-family: "base-mono-narrow", monospace !important;
+	font-family: monospace !important;
 //	line-height: 1.2 !important;
 	color: rgba(0,0,0,.5) !important;
 }
