--- a/assets/css/_sass/_research-project.scss
+++ b/assets/css/_sass/_research-project.scss
@@ -176,11 +176,11 @@
 	margin: 0;
 	margin-bottom: 1em;
 	padding: 0;
-	font-family: "base-mono-narrow", monospace;
+	font-family:  monospace;
 	font-weight: 200;
 	span {
 		display: inline-block;
-		font-family: "base-mono-wide", monospace;
+		font-family: monospace;
 		font-weight: 400;
 		text-transform: uppercase;
 		white-space: nowrap;
