--- a/assets/css/_sass/_components/stats-box.scss
+++ b/assets/css/_sass/_components/stats-box.scss
@@ -8,7 +8,7 @@
 .home-makerspace__hours {
 	position: relative;
 	border: 4px solid magenta;
-	font-family: "base-mono-narrow", monospace;
+	font-family:  monospace;
 	font-size: 20px;
 	text-align: right;
 	margin-top: calc(2em + 4px);
