--- a/assets/css/_sass/_events.scss
+++ b/assets/css/_sass/_events.scss
@@ -37,7 +37,7 @@
 	margin-bottom: 1em;
 	font-size: 1rem;
 	font-weight: 200;
-	font-family: "base-mono-narrow", monospace;
+	font-family:  monospace;
 	line-height: 1;
 	color: rgba(0,0,0,.5);
 	@media screen and (min-width: 900px) {
