--- a/assets/css/_sass/_home.scss
+++ b/assets/css/_sass/_home.scss
@@ -503,7 +503,7 @@ html, body {
 .home-maker__hours {
 	position: relative;
 	border: 4px solid $brightgrape;
-	font-family: "base-mono-narrow", monospace;
+	font-family:  monospace;
 	font-size: 20px;
 	text-align: right;
 	margin-top: calc(2em + 4px);
