--- a/assets/css/_sass/_navbar.scss
+++ b/assets/css/_sass/_navbar.scss
@@ -66,7 +66,7 @@ ul[class*="flexnav"] {
 	a {
 		position: relative;
 		display: inline-block;
-		font-family: "base-mono-wide", monospace;
+		font-family: monospace;
 		font-weight: 200;
 		text-decoration: none;
 		text-transform: uppercase;
@@ -134,7 +134,7 @@ ul[class*="flexnav"] {
 	align-items: center;
 	height: 60px;
 	padding-right: 1em;
-	font-family: "base-mono-wide", monospace;
+	font-family: monospace;
 	font-weight: 200;
 	text-transform: uppercase;
 	color: $medskyblue;
