--- a/assets/css/_sass/_universal-styles.scss
+++ b/assets/css/_sass/_universal-styles.scss
@@ -56,7 +56,7 @@
 		padding: .25rem .5em;
 		margin-top: 4px;
 		font-size: 1rem;
-		font-family: "base-mono-wide", monospace !important;
+		font-family: monospace !important;
 		font-weight: 700;
 		line-height: 1;
 		text-decoration: none;
