--- a/assets/css/_sass/_home.scss
+++ b/assets/css/_sass/_home.scss
@@ -482,6 +482,7 @@ html, body {
 	background-image: url('../img/decorative/for-students.jpg');
 	background-size: 150%;
 	background-position: left bottom;
+	background-repeat: no-repeat;
 }
 
 .home-student__cta {
