Adds padding below Spatial Tech page content.
Fixes #484.

--- a/assets/css/_sass/_spatial-tech.scss
+++ b/assets/css/_sass/_spatial-tech.scss
@@ -547,7 +547,7 @@
 // leaving as reminder that styles currently copied
 // <ul>
 .maker-inventory__list {
-
+padding-bottom: 3em;
 }
 
 /* People: */
