--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -10,7 +10,7 @@
 		<ul class="flexnav-main-grid">
 		{% assign pages = site.pages | sort: 'order' %}
 		{% for page in pages %}
-		{% unless page.url contains "/page/" or page.nav == false %}
+		{% unless page.url contains "/page/" or page.nav != true %}
 		{% if page.layout != nil %}
 			<li class="flexnav__item"><a href="{{ page.url }}">{{ page.title | replace: ' and ', ' &amp; ' }}</a></li>
 		{% endif %}
@@ -20,7 +20,7 @@
 				<div class="flexnav-more__prompt" aria-label="More menu items">More<span>&rsaquo;</span></div>
 				<ul class="flexnav-more__wrapper">
 				{% for page in pages %}
-				{% unless page.url contains "/page" or page.nav == false %}
+				{% unless page.url contains "/page" or page.nav != true %}
 				{% if page.layout != nil %}
 					<li class="flexnav-more__item"><a href="{{ page.url }}">{{ page.title | replace: ' and ', ' &amp; ' }}</a></li>
 				{% endif %}
