--- a/_layouts/work.html
+++ b/_layouts/work.html
@@ -12,14 +12,14 @@ layout: default
 	<div class="project-content__title">
 		<span>{{ page.title | replace: ' - ', ': ' }}</span>
 	</div>
-	<div class="project-content__metadata" {% if title_array.size <= 2 %}style="flex-flow: column nowrap;"{% endif %}>
+	<div class="project-content__metadata" style="flex-flow: column nowrap;">
 		{% if page.start-year == page.end-year or page.end-year.blank? %}
 		<div class="project-content__year"><span>When:</span><div>{{ page.start-year }}</div></div>
 		{% else %}
 		<div class="project-content__year"><span>When:</span><div>{{ page.start-year }}-{{ page.end-year }}</div></div>
 		{% endif %}
 		<div class="project-content__category">{% if page.research-category %}<span>Work type:</span><div>{{ page.research-category | replace: 'and', '&amp;' }}</div>{% endif %}</div>
-		<!--div class="project-content__cta"><a href="{{ page.link }}">Visit Project</a></div-->
+		{% if page.link %}<div class="project-content__cta"><a href="{{ page.link }}">Visit project</a></div>{% endif %}
 	</div>
 	<div class="project-content__text">{{ content }}</div>
 	<div class="project-content__collaborators">
