- removes defunct amanda CSS file - updates _home.scss and index.html to alter 3 things on homepage:   - student opps sections “see all” text alignment   - moves Open Office Hours info into events section and styles as upcoming events   - Changes “See all” -type text on homepage to have the same color/font (e.g. wasn’t happening under Events and Hours/Spaces sections)

--- a/assets/css/_sass/_home.scss
+++ b/assets/css/_sass/_home.scss
@@ -423,12 +423,12 @@ html, body {
 
 }
 
-.home-events__upcoming {
+.home-events__upcoming:not(.home-events__cta) {
 	display: flex;
 	flex-flow: column nowrap;
 	align-items: center;
 	justify-content: flex-start;
-	div:not(.events-item__cta) {
+	div:not(.events-item__cta):not(.home-events__cta) {
 		width: 100%;
 		border: 1px solid $textgray !important;
 		margin-top: 1em;
@@ -460,11 +460,17 @@ html, body {
 
 }
 
+.home-hours__cta {
+	bottom: 0;
+	left: 0;
+}
+
 /* Student Opportunities: */
 
 .home__student-opps {
 	grid-area: students;
 	position: relative;
+	padding-right: 5px;
 	display: grid;
 	grid-template-columns: 1fr;
 	grid-template-rows: auto auto;
@@ -499,7 +505,6 @@ html, body {
 }
 
 .home-student__cta {
-	position: absolute;
 	bottom: 0;
 	left: 0;
 }
