--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,7 +5,8 @@
         <a href="#main" aria-label="Back to top">
           <img src="{{ '/assets/img/svg/thin-up-arrow-white.svg' | relative_url }}" alt="Up arrow">
           <span>Back<br/>to top</span>
-        </a>
+        </a><br><br>
+        <a href="https://github.com/scholarslab/scholarslab.org/blob/master/docs/authoring-and-editing.md">How to blog</a>
     </div>
 
     <div class="footer__sitemap">
