--- a/_includes/snowday.html
+++ b/_includes/snowday.html
@@ -1,4 +1,4 @@
 <div id="snowday-banner">
 <h1>The Scholars' Lab is running modified hours today.</h1>
-<p>Please see the [UVA Library hours page](https://www.library.virginia.edu/hours/) for when Alderman will open, and email scholarslab@virginia.edu with any questions.</p>
+  <p>Please see the <a href="https://www.library.virginia.edu/hours">UVA Library hours page</a> for when Alderman will open. Staff may not be available in-person due to travel conditions; please email scholarslab@virginia.edu with any questions.</p>
 </div>
