--- a/_includes/student-projects.html
+++ b/_includes/student-projects.html
@@ -9,23 +9,23 @@
 {% capture studentstring %}
 {% include student-project-name.html studentid=project.student %}
 {% endcapture %}
-* Student(s): {{ studentstring | strip }}
+* <strong>Student(s)</strong>: {{ studentstring | strip }}
 * <strong>Type</strong>: {{ project.type }}
 * <strong>Dates</strong>: {{ project.years }}
-* Description: {{ project.description }} {% if project.url %} More info at the <a href="{{ project.url }}">project website</a>.{% endif %}
+* <strong>Description</strong>: {{ project.description }} {% if project.url %} More info at the <a href="{{ project.url }}">project website</a>.{% endif %}
 
 {% if project.title == 'Prism' or project.title == 'Ivanhoe' or project.title == 'ClockWork' or project.title == 'Dash-Amerikan' or project.title == 'UVA Reveal' %}
 
 {% assign project_posts = site_posts | where: 'tags', project.title %}
 {% if project_posts != empty %}
-* Recent Related Posts
+* <strong>Recent Related Posts</strong>
   {% for post in project_posts limit:5 %}
   * <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a>
   {% endfor %}
 {% endif %}
 {% else %} 
 {% if project.posts != empty %}
-* Related Posts
+* <strong>Related Posts</strong>
   {% for post_slug in project.posts %}
     {% for post in site_posts %}
       {% if post_slug == post.slug %}
