--- a/assets/css/_sass/_people.scss
+++ b/assets/css/_sass/_people.scss
@@ -211,7 +211,7 @@
 
 /* Position: */
 
-.people-item__position {
+.people-item__position, .people-item__position ul {
 	margin: 0;
 	padding: 0;
 	list-style-type: none;
@@ -223,10 +223,6 @@
 
 /* Students: */
 
-.people__students {
-
-}
-
 .people-students__title {
 	color: hsla(300, 90%, 90%, 1) !important;
 	div {
@@ -234,15 +230,7 @@
 	}
 }
 
-.people-students__gallery {
-
-}
-
 /* Alumni: */
-
-.people__alumni {
-	
-}
 
 .people-alumni__title {
 	color: hsla(230, 90%, 90%, 1) !important;
@@ -251,7 +239,7 @@
 	}
 }
 
-.people-alumni__gallery {
+.people-item-wrapper {
 	a {
 		color: rgba(0,0,0,.7);
 		.people-item__position {
