Changes to the events formatting

--- a/_layouts/events.html
+++ b/_layouts/events.html
@@ -38,6 +38,9 @@ layout: default
 				{% if page.location %}
 				<span>Place:</span>{{ page.location }}<br/>
 				{% endif %}
+				{% if page.instructor %}
+				<span>Instructor(s):</span>{{ page.instructor }}<br/>
+				{% endif %}
 			</div>
 		</div> <!-- end stats -->
 
