--- a/_includes/makerspace-hours.html
+++ b/_includes/makerspace-hours.html
@@ -1,9 +1,9 @@
-<span>Winter Break</span><br/>
-<span>Dec. 19-Jan. 1</span>Closed<br/><br/>
+<span>Spring 2019</span><br/>
 
-<span>January Term</span>January 2-13<br/>
-<span>Monday-Friday</span>1-5pm<br/>
-<span>Sat/Sun</span>Closed<br/><br/>
+<span>Monday-Wednesdays</span>1-7pm<br/>
+<span>Thursday</span>1-9pm<br/>
+<span>Friday</span>1-5pm<br/>
+<span>Sat-Sun</span>Closed<br/><br/>
 
 <!-- template - regular hours -->
 <!-- 
