Changed from dog photo to 3D printing photo

--- a/_layouts/people.html
+++ b/_layouts/people.html
@@ -48,7 +48,7 @@ layout: default
 		{% endif %}
 		<div class="person__img">
 			{% if profile_pic == empty %}
-			    <img src="{{ site.baseurl }}/assets/img/people/scholarslab.png" alt="Scholars' Lab Lab">
+			    <img src="{{ site.baseurl }}/assets/img/people/grid/default-printing.jpg" alt="[Default image] Makerspace printing in process">
 			{% else %}
 			    {% for pic in profile_pic %}
 			    {% unless pic.path contains 'cropped'  or pic.path contains 'grid' %}
