Adds working analytics script.

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -48,4 +48,7 @@
 <meta name="msapplication-config" content="/assets/img/favicon/browserconfig.xml">
 <meta name="theme-color" content="#ffffff">
 
+  {% if site.analytics %}
+  {% include analytics.html %}
+  {% endif %}
 </head>
