--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,13 +15,16 @@
   <meta property="og:type" content="{{ page.og_type }}">
   <meta property="og:url" content="{{ page.url | replace:'index.html','' | absolute_url }}/">
   {% if page.image %}<meta property="og:image" content="{{ page.image }}">{% endif %}
-  {% assign authors = site.people | where: "slug", page.author %}
-  {% for author in authors %}<meta property="og:author" content="{{ author.name }}">{% endfor %}
-  {% if authors == empty %}
-    {% assign author = page.author | split: '-' %}
-    {% for name in author %}
-        <meta property="og:author" content="{{ name | capitalize }}">
-    {% endfor %}
+
+  {% if page.author.size > 0 %}
+  {% for author in page.author %}
+    {% assign people = site.people | where: 'slug', author %}
+    {% if people.size > 0 %}
+        {% for person in people %}
+  <meta property="og:author" content="{{ person.title }}">
+        {% endfor %}
+    {% endif %}
+  {% endfor %}
   {% endif %}
 
   <!-- Twitter Cards https://developer.twitter.com/en/docs/tweets/optimize-with-cards/overview/summary -->
