Updated title text

--- a/_includes/makerspace-hours.html
+++ b/_includes/makerspace-hours.html
@@ -1,4 +1,4 @@
-<span>Spring 2019</span><br/>
+<span>Regular Spring 2019 Hours</span><br/>
 
 <span>Monday-Wednesdays</span>1-7pm<br/>
 <span>Thursday</span>1-9pm<br/>
