Update Makerspace summer hours

--- a/_includes/makerspace-hours.html
+++ b/_includes/makerspace-hours.html
@@ -1,9 +1,15 @@
+<!--
 <span>Regular Spring 2019 Hours</span><br/>
 
 <span>Monday-Wednesdays</span>1-7pm<br/>
 <span>Thursday</span>1-9pm<br/>
 <span>Friday</span>1-5pm<br/>
 <span>Sat-Sun</span>Closed<br/><br/>
+-->
+
+<span>Summer 2019 Hours</span><br/>
+
+<span>Monday-Friday</span>1-5pm<br/>
 
 <!-- template - regular hours -->
 <!-- 
