--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -38,6 +38,10 @@
           <img src="{{ '/assets/img/svg/envelope-outline-white.svg' | relative_url }}" alt="Email icon">
           <span>Email us</span>
         </a>
+        <a href="https://scholarslab.lib.virginia.edu/feed.xml">
+          <!-- <div>RSS icon made by <a href="https://www.freepik.com/" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/"                 title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/"                 title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div> -->
+          <img src="{{ '/assets/img/svg/rss.svg' | relative_url }}">
+          <span>RSS feed</span>
       </div>
       <!--div class="footer-connect__news">
         <div class="footer-news__title">Newsletter</div>
